# xla-test

./: .pre-commit-config.yaml  README.md  install.sh  pyproject.toml
src/: train.py
