[tool.poetry]
name = "xla-test"
version = "0.1.0"
description = ""
authors = ["Sean Yi"]
readme = "README.md"

[[tool.poetry.source]]
name = "libtpu"
url = "https://storage.googleapis.com/libtpu-releases/index.html"
priority = "primary"

[[tool.poetry.source]]
name = "pypi"
priority = "default"

[tool.poetry.dependencies]
python = "^3.8"
datasets = "^2.18.0"
torch = { url = "https://download.pytorch.org/whl/cu118/torch-2.2.0%2Bcu118-cp38-cp38-linux_x86_64.whl" }
torch_xla = { version = "~2.2.0", extras = ["tpu"], source = "libtpu" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
