[tool.poetry]
name = "xla-test"
version = "0.1.0"
description = ""
authors = ["Sean Yi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
datasets = "^2.18.0"
torch = { url = "https://download.pytorch.org/whl/cu118/torch-2.2.0%2Bcu118-cp310-cp310-linux_x86_64.whl" }
scikit-learn = "^1.4.2"
jax = "^0.4.26"
ipython = "^8.23.0"
evaluate = "^0.4.1"
transformers = "^4.40.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
